--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: Hye Rim
-author_bio: Hi, my name is Hye Rim. I built this site using devlopr-jekyll :D
+author: HR
+author_bio: Hi, my name is HR.
 author_email: "mail@sujaykundu.com"
 author_location: India
 author_website_url: "https://sujaykundu.com"
