--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ urls:
 author_logo: profile.png
 author: HR
 author_bio: Hi, my name is HR.
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
+author_email: "gpfla132@naver.com"
+author_location: Korea
+author_website_url: "None"
 typewrite-text: ❝有影子的地方必定有光❞
 
 # Experiences
@@ -72,16 +72,16 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: null
+github_username:  mireyh
+facebook_username: null
+linkedin_username: null
+behance_username: null
+instagram_username: null
+medium_username: null
+telegram_username: null
+dribbble_username: null
+flickr_username: null
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
