--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ flickr_username: null
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 disqus_shortname: mireyh-github-io
-hyvor_talk_website_id: 476
+# hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
 wakatime_username: sujaykundu777
