--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
+author_logo: profile2.png
 author: HR
 author_bio: Hi, my name is HR.
 author_email: "gpfla132@naver.com"
